--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    
 
 </body>
-<script src="/DELTA TASK/jav.js"></script>
-<script src="/DELTA TASK/script2.js"></script>
+<script src="jav.js"></script>
+<script src="script2.js"></script>
 
 </html>
