--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     by 3 seconds. the game automatically if timer reaches 0</div>  
     
 
-  <img src="/DELTA TASK/project.png">
+  <img src="project.png">
     <div class="container">
    
         <div class="red" >RED</div>
