--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SNAKE MANIA</title>
     <link rel="stylesheet" href="hacke.css">
 
     
@@ -18,7 +18,7 @@
     by 3 seconds. the game automatically if timer reaches 0</div>  
     
 
-  <img src="project.png">
+  <img src="/project.png">
     <div class="container">
    
         <div class="red" >RED</div>
